--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,367 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Yeon+Sung&display=swap');
+
+body {
+  background-color: #f6f6f6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  font-family: 'Nanum Pen Script';
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (min-width: 650px) {
+  .App {
+    width: 640px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
+@media (max-width: 650px) {
+  .App {
+    width: 90vw;
+  }
+}
+
+#root {
+  background-color: white;
+  box-shadow: rgba(100, 100, 100, 0.2) 0 10px 30px 0;
+}
+
+.App {
+  padding-left: 20px;
+  padding-right: 20px;
   min-height: 100vh;
+}
+
+/* MyButton */
+
+.MyButton {
+  border: none;
+  border-radius: 8px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+
+  cursor: pointer;
+  font-family: 'Nanum Pen Script';
+  font-size: 22px;
+  white-space: nowrap;
+}
+
+.MyButton_default {
+  background-color: #ececec;
+}
+
+.MyButton_positive {
+  background-color: seagreen;
+  color: white;
+}
+
+.MyButton_negative {
+  background-color: tomato;
+  color: white;
+}
+
+/* MyHeader */
+
+.MyHeader {
+  border-bottom: 1px solid #e6e6e6;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+
+  display: flex;
+  align-items: center;
+  font-size: 26px;
+}
+
+.MyHeader > div {
+  display: flex;
+}
+
+.MyHeader .head_text {
+  width: 50%;
+  justify-content: center;
+}
+
+.MyHeader .left_child {
+  width: 25%;
+  justify-content: start;
+}
+
+.MyHeader .right_child {
+  width: 25%;
+  justify-content: end;
+}
+
+/* DiaryList */
+
+.DiaryList .menu_wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.DiaryList .right_col {
+  flex-grow: 1;
+}
+
+.DiaryList .right_col button {
+  width: 100%;
+}
+
+/* FilterMenu */
+
+.FilterMenu {
+  margin-right: 10px;
+  border: none;
+  border-radius: 8px;
+  background-color: #ececec;
+
+  padding: 10px;
+
+  cursor: pointer;
+  font-family: 'Nanum Pen Script';
+  font-size: 20px;
+  text-align: center;
+}
+
+/* DiaryItem */
+
+.DiaryItem {
+  display: flex;
+  border-bottom: 1px solid #e6e6e6;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.DiaryItem .item_img_wrapper {
+  width: 100px;
+  min-height: 80px;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  cursor: pointer;
+}
+
+.DiaryItem .item_img_wrapper_1 {
+  background-color: #64c964;
+}
+
+.DiaryItem .item_img_wrapper_2 {
+  background-color: #9dd772;
+}
+
+.DiaryItem .item_img_wrapper_3 {
+  background-color: #fdce17;
+}
+
+.DiaryItem .item_img_wrapper_4 {
+  background-color: #fd8446;
+}
+
+.DiaryItem .item_img_wrapper_5 {
+  background-color: #fd565f;
+}
+
+.DiaryItem .item_img_wrapper img {
+  width: 50%;
+}
+
+.DiaryItem .item_info_wrapper {
+  padding-left: 20px;
+  padding-top: 10px;
+  flex-grow: 1;
+
+  cursor: pointer;
+}
+
+.DiaryItem .info_date {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.DiaryItem .info_content_preview {
+  font-size: 20px;
+}
+
+/* DiaryEditor */
+
+.DiaryEditor {
+}
+
+.DiaryEditor h4 {
+  font-size: 22px;
+}
+
+.DiaryEditor section {
+  margin-bottom: 50px;
+}
+
+.DiaryEditor .input_date {
+  border: none;
+  border-radius: 8px;
+  background-color: #ececec;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+
+  font-family: 'Nanum Pen Script';
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.DiaryEditor .emotion_img_wrapper {
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  gap: 2%;
+}
+
+.DiaryEditor textarea {
+  width: 100%;
+  border: none;
+  border-radius: 8px;
+  background-color: #ececec;
+  min-height: 200px;
+  padding: 20px;
+  box-sizing: border-box;
+
+  resize: vertical;
+  font-family: 'Nanum Pen Script';
+  font-size: 20px;
+}
+
+.DiaryEditor .btn_wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* EmotionItem */
+
+.EmotionItem {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+  border-radius: 8px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  cursor: pointer;
+}
+
+.EmotionItem_off {
+  background-color: #ececec;
+}
+
+.EmotionItem_on_1 {
+  background-color: #64c964;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.EmotionItem_on_2 {
+  background-color: #9dd772;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.EmotionItem_on_3 {
+  background-color: #fdce17;
+  color: white;
+}
+
+.EmotionItem_on_4 {
+  background-color: #fd8446;
+  color: white;
+}
+
+.EmotionItem_on_5 {
+  background-color: #fd565f;
+  color: white;
+}
+
+.EmotionItem img {
+  width: 50%;
+  margin-bottom: 10px;
+}
+
+.EmotionItem span {
+  font-size: 18px;
+}
+
+/* Diary */
+
+.Diary {
+}
+
+.Diary h4 {
+  font-size: 22px;
+}
+
+.Diary section {
+  width: 100%;
+  margin-bottom: 100px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.Diary .current_img_wrapper {
+  width: 250px;
+  height: 250px;
+  border-radius: 8px;
+  background-color: #ececec;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.Diary .current_img_wrapper1 {
+  background-color: #64c964;
+}
+
+.Diary .current_img_wrapper2 {
+  background-color: #9dd772;
+}
+
+.Diary .current_img_wrapper3 {
+  background-color: #fdce17;
+}
+
+.Diary .current_img_wrapper4 {
+  background-color: #fd8446;
+}
+
+.Diary .current_img_wrapper5 {
+  background-color: #fd565f;
+}
+
+.Diary .current_img_wrapper .emotion_descript {
+  color: white;
+  font-size: 22px;
+}
+
+.Diary .content_wrapper {
+  width: 100%;
+  background-color: #ececec;
+  border-radius: 8px;
+  word-break: keep-all;
+  overflow-wrap: break-word;
+}
+
+.Diary .content_wrapper p {
+  font-size: 20px;
+  font-family: 'Yeon Sung';
+  line-height: 2.5;
+  text-align: left;
+  padding: 20px;
 }
